--- a/manifest.json
+++ b/manifest.json
@@ -111,7 +111,7 @@
             "mode" : "hash"
         },
         "devServer" : {
-            "https" : true
+            "https" : false
         },
         "title" : "南开大学二手网站"
     }
