--- a/.hbuilderx/launch.json
+++ b/.hbuilderx/launch.json
@@ -14,7 +14,7 @@
         	},
         	"h5" : 
         	{
-        		"launchtype" : "local"
+        		"launchtype" : "remote"
         	},
         	"type" : "uniCloud"
         },
