--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,10 @@
         },
         /* 模块配置 */
         "modules" : {
-            "Push" : {}
+            "Push" : {},
+            "Camera" : {},
+            "Record" : {},
+            "VideoPlayer" : {}
         },
         /* 应用发布信息 */
         "distribute" : {
@@ -55,9 +58,10 @@
                 "push" : {
                     "unipush" : {
                         "version" : "2",
-                        "offline" : false
+                        "offline" : true
                     }
-                }
+                },
+                "speech" : {}
             },
             "icons" : {
                 "android" : {
@@ -124,6 +128,9 @@
         "devServer" : {
             "https" : false
         },
-        "title" : "南开大学二手网站"
+        "title" : "南开大学二手网站",
+        "unipush" : {
+            "enable" : true
+        }
     }
 }
